# locli-girl

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  release.yml
src/: app.rs  config.rs  hls.rs  lib.rs  main.rs  mpris.rs  piped.rs  player.rs  stations.rs  stream.rs  ts.rs  visualizer.rs
src/tui/: layout.rs  mod.rs
tests/: integration_test.rs
