[package]
name = "locli-girl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "locli-girl"
path = "src/main.rs"

[lib]
name = "locli_girl"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
crossterm = "0.28"
cpal = "0.15"
dirs = "5"
env_logger = "0.11"
log = "0.4"
num-complex = "0.4"
ratatui = "0.28"
reqwest = { version = "0.12", features = ["blocking"] }
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
souvlaki = { version = "0.7", features = ["use_dbus"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
